# CLI-Applications

./: .gitignore  README.md
currency_converter_cli/: README.md
currency_converter_cli/src/: .env.example  exchange_cli.py  get_exchange_rate.py
hello_cli/: README.md  pyproject.toml
hello_cli/hello_cli/: abbreviate.py  actions.py  calc.py  cooking.py  custom_action.py  divide.py  files.py  fromfile.py  groups.py  ls.py  personal_info.py  point.py  size.py  sum.py  test.py  weekdays.py
