# pyproject.toml

[build-system]
requires = ["setuptools>64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hello_cli"
versijon = "0.0.1"
description = "A directory checker for use in the CLI"
readme = "README.md"
authors = [{name = "Liam Loughnane", email = "loughliam@gmail.com" }]

[project.scripts]
currency_concerter_cli = "hello_cli.__main__:main"